fix z-index bug!

--- a/src/studio/animationTimeline/components/Content/LanesViewer.css
+++ b/src/studio/animationTimeline/components/Content/LanesViewer.css
@@ -25,6 +25,7 @@
 
   &:hover {
     width: auto;
+    z-index: 1000;
   }
 }
 
