--- a/src/studio/common/components/HalfPieContextMenu/index.css
+++ b/src/studio/common/components/HalfPieContextMenu/index.css
@@ -1,6 +1,6 @@
 .container {
   position: fixed 0 0 0 0;
-  z-index: 1000;
+  z-index: 10000;
 }
 
 .item {
